--- a/404.html
+++ b/404.html
@@ -14,6 +14,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
+      width: 100vh;
       margin: 0;
       padding: 20px;
       text-align: center;
