--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/element.svg" />
+    <meta property="og:image" content="https://xhiquality.github.io/cason-coding-portfolio/websitepreview.png" />
+    <meta property="og:image:type" content="image/png" /> <!-- You can change this based on your image type -->
+    <meta property="og:image:width" content="1200" /> <!-- Recommended width -->
+    <meta property="og:image:height" content="630" /> <!-- Recommended height -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coding with Cason</title>
   </head>
