--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="A coding portfolio for Cason Pittman">
+    <meta name="keywords" content="Portfolio,Java,React,JavaScript,Cason,Software Engineering, Frontend">
+    <meta name="author" content="Cason Pittman">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg+xml" href="/cason-coding-portfolio/element.svg" />
     <meta property="og:image" content="https://xhiquality.github.io/cason-coding-portfolio/websitepreview.png" />
     <meta property="og:image:type" content="image/png" /> <!-- You can change this based on your image type -->
